src/include/lem/solarix/faind.h


typedef void (FAIND_CALLBACK *EngineCallbackProc_StartFile)( const wchar_t *Filename );

typedef void (FAIND_CALLBACK *EngineCallbackProc_StartFolder)( const wchar_t *Folder );

typedef void (FAIND_CALLBACK *EngineCallbackProc_Success)(
                                                          const wchar_t *filename,
                                                          const wchar_t *location,
                                                          const wchar_t *tmp
                                                         );

 typedef void* HFAIND;

 typedef void* HFAINDCMD;

 typedef void* HFAINDXML;

 typedef void* HREGEXEX;

 typedef void* HFAINDPARAMS;


// Инициализация движка и грамматической машины.
// Словарь и другие внешние компоненты пока не загружаются.
FAIND_API(HFAIND) sol_CreateSearchEngine(void);

FAIND_API(HFAIND) sol_CreatePortableSearcher( int flags );


// Load the dictionary (morphology and syntax analyzer + thesaurus)
// Return: 2 - already loaded, 1 - ok, 0 - error has occured.
FAIND_API(int) sol_LoadDictionaryA( HFAIND hEngine, const char *Filename );

FAIND_API(int) sol_LoadDictionaryW( HFAIND hEngine, const wchar_t *Filename );

// Удаление экземпляра движка, освобождение всех ресурсов.
FAIND_API(int) sol_DeleteSearchEngine( HFAIND hEngine );


// Для портабельного поисковика (sol_CreatePortableSearcher) - подцепляем индекс в
// указанной папке для последующего поиска.
FAIND_API(int) sol_AttachPortableIndex( HFAIND hEngine, const wchar_t *IndexFolder );


// Завершение инициализации поискового движка - загрузка параметров
// из указанного конфигурационного файла.
FAIND_API(int) sol_ReadIniW( HFAIND hEngine, const wchar_t *ini_filename );

FAIND_API(int) sol_ReadIniA( HFAIND hEngine, const char *ini_filename );


// Включение трассировки активности поискового движка в указанный файл.
// Возвращается: 0 - трассировка включена, -1 ошибка открытия файла журнала
FAIND_API(int) sol_OpenLogFileA( HFAIND hEngine, const char *logfilename );

FAIND_API(int) sol_OpenLogFileW( HFAIND hEngine, const wchar_t *logfilename );


// Выключение трассировки в журнал, файл журнала закрывается.
FAIND_API(void) sol_CloseLogFile( HFAIND hEngine );


// Генерировать результаты поиска как HTML страницу, а не XML по умолчанию.
FAIND_API(void) sol_GenerateHtml( HFAIND hEngine );


// Generate XML results (this is default behaviour of the engine).
FAIND_API(void) sol_GenerateXml( HFAIND hEngine );


// Result page is not needed.
FAIND_API(void) sol_NoResults( HFAIND hEngine );



// В HTML результатах не размещать заголовок
// (тэги <html><title>...</title><body> и закрывающие </body></html>).
FAIND_API(void) sol_StripHtml( HFAIND hEngine );


// Заполняет буфер текстом с описанием последней ошибки. Возвращает
// 0, если ошибок не было, 1 если были. Указатель на буфер может быть NULL,
// тогда просто возвращается признак наличия ошибки.
FAIND_API(int) sol_GetError( HFAIND hEngine, wchar_t *buffer, int buffer_len );



// Очищает внутренний признак ошибки
FAIND_API(void) sol_ClearError( HFAIND hEngine );


// Процедуры для работы с группой параметров для подстановки в запросах.
FAIND_API(HFAINDPARAMS) sol_CreateParams( HFAIND hEngine );

FAIND_API(int) sol_DeleteParams( HFAINDPARAMS hParams );

FAIND_API(int) sol_AddParam( HFAINDPARAMS hParams, const wchar_t *ParamName, const wchar_t *ParamValue );


// Parse the query and return the executor handle.
FAIND_API(HFAINDCMD) sol_ParseQuery( HFAIND hEngine, const wchar_t *WideQuery );


FAIND_API(HFAINDCMD) sol_ParseSqlQuery( HFAIND hEngine, const wchar_t *query );

FAIND_API(HFAINDCMD) sol_ParseQueryWithParams( HFAIND hEngine, const wchar_t *query, HFAINDPARAMS hParams );

FAIND_API(HFAINDCMD) sol_ParseSqlQueryWithParams( HFAIND hEngine, const wchar_t *query, HFAINDPARAMS hParams );


// Run the executor which executes the query.
FAIND_API(int) sol_ExecuteQuery( HFAIND hEngine, HFAINDCMD hCmd );


// Delete the executor after all.
FAIND_API(void) sol_DeleteQuery( HFAINDCMD hCmd );


// Do sol_ParseQuery, sol_ExecuteQuery, sol_DeleteQuery
FAIND_API(int) sol_Execute( HFAIND hEngine, const wchar_t *query );

FAIND_API(int) sol_ExecuteSql( HFAIND hEngine, const wchar_t *query );

FAIND_API(int) sol_ExecuteWithParams( HFAIND hEngine, const wchar_t *query, HFAINDPARAMS hParams );

FAIND_API(int) sol_ExecuteSqlWithParams( HFAIND hEngine, const wchar_t *query, HFAINDPARAMS hParams );



// Возвращает длину (в символах char) буфера результата.
FAIND_API(int) sol_GetResultLen( HFAINDCMD hCmd );


// Копирует результаты поиска в указанный буфер, который должен иметь достаточную
// длину (см. sol_GetResultLen).
FAIND_API(void) sol_GetResult( HFAINDCMD hCmd, char *buffer );

FAIND_API(void) sol_GetResultW( HFAINDCMD hCmd, wchar_t *buffer );



// Установка пользовательских callback-процедур для отображения процесса сканирования
// файлов при поиске или индексировании.
//
// Return value:
//              0  - callback function is installed
//              -1 - an error has occured
FAIND_API(int) sol_SetCallback_StartFile( HFAIND hEngine, EngineCallbackProc_StartFile ptrFunction );

FAIND_API(int) sol_SetCallback_StartFolder( HFAIND hEngine, EngineCallbackProc_StartFolder ptrFunction );

FAIND_API(int) sol_SetCallback_Success( HFAIND hEngine, EngineCallbackProc_Success ptrFunction );


// Returns the size (in wchar_t's + 1) of the buffer needed for storing the list of
// index names. The list can be retrieved via sol_GetDomainsList call.
FAIND_API(int) sol_GetDomainsListSize( HFAIND hEngine );


// Returns the number of indexes whose names are listed in 'Buffer'.
// Each index name is followed  by 'Delimiter' char
FAIND_API(int) sol_GetDomainsList( HFAIND hEngine, wchar_t Delimiter, wchar_t *Buffer );

FAIND_API(HFAINDXML) sol_GetDomainsListXml( HFAIND hEngine );


FAIND_API(int) sol_XmlTextLen( HFAINDXML xml );

FAIND_API(int) sol_GetXmlText( HFAINDXML xml, char *Buffer, int BufferSize );

FAIND_API(void) sol_DeleteXml( HFAINDXML xml );


// Возвращает количество актуальных индексов
FAIND_API(int) sol_CountDomains( HFAIND hEngine );


// Возвращает указатель (или NULL) на строку комменария к индексу.
FAIND_API(const wchar_t*) sol_GetDomainComment( HFAIND hEngine, const wchar_t *Domain_Name );


// Поиск актуального индекса с заданным именем, возвращается id индекса либо -1, если
// поиск безуспешен.
FAIND_API(int) sol_FindDomain( HFAIND hEngine, const wchar_t *Domain_Name );




// ***************************************************************************
// Группа процедур для работы с расширенными регулярными выражениями (RegexEx)
// ***************************************************************************

// Конструктор и деструктор
FAIND_API(HREGEXEX) sol_CreateRx( HFAIND hEngine, const wchar_t *Pattern );

FAIND_API(void) sol_DeleteRx( HREGEXEX hRegex );


// Изменение параметров
FAIND_API(void) sol_SetMorphologyRx( HREGEXEX hRegex, int Mode );

FAIND_API(void) sol_SetSyntaxRx( HREGEXEX hRegex, int Mode );

FAIND_API(void) sol_SetSameSentenceRx( HREGEXEX hRegex );

FAIND_API(void) sol_SetDistanceRx( HREGEXEX hRegex, int Distance );

FAIND_API(void) sol_SetOrderedRx( HREGEXEX hRegex, int Ordered );

FAIND_API(void) sol_EnableThesaurusRx( 
                                     HFAIND hEngine, 
                                     HREGEXEX hRegex,
                                     int Jumps,
                                     int AllowSynonyms,
                                     int AllowGrammar,
                                     int AllowSemantics,
                                     int AllowTranslations
                                    );

FAIND_API(void) sol_SetSoundexRx( HREGEXEX hRegex, int Enable );

FAIND_API(void) sol_AllowPartialMatchingRx( HREGEXEX hRegex, int Allow );

FAIND_API(void) sol_SetStripAccentsRx( HREGEXEX hRegex, int Strip );

FAIND_API(void) sol_SetOnlyOneMatchRx( HREGEXEX hRegex, int OnlyOne );